Worked on driver

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 # Ignore everything
-*
+/*
 
 # Except source directories
-!.gitignore
+!/.gitignore
+!/local_src/
 !/local_src/driver-gamepad-1.0/
-!local_src/*
+!/local_src/game-1.0/
+!/local_src/driver-gamepad-1.0/platform/
