--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 
 # Except source directories
 !/.gitignore
-!/local_src/
-!/local_src/driver-gamepad-1.0/
-!/local_src/game-1.0/
-!/local_src/driver-gamepad-1.0/platform/
+!local_src/
+!local_src/driver-gamepad-1.0/*
+!local_src/game-1.0/*
+!local_src/driver-gamepad-1.0/platform/*
