Working interrupt in driver and game

--- a/local_src/game-1.0/Makefile
+++ b/local_src/game-1.0/Makefile
@@ -6,13 +6,16 @@
 # add more flags here,
 # but don't remove the "+="
 #
+CC = arm-cortexm3-uclinuxeabi-gcc
 CFLAGS += -O2 -std=c99 -g -lm -Wall #-Wsign-compare -Wfloat-equal -Wformat-security #-Werror
 CPPFLAGS += 
-LDFLAGS += 
+LDFLAGS += -lm
 
 
 all: game
 
+game: $(OBJ)
+	${CC} ${CFLAGS} game.c display_functions.c $(OBJ) -o game ${LDFLAGS}
 clean:
 	-rm -f game
 
